--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,29 +26,21 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = '17'
     }
     buildFeatures {
         viewBinding true
     }
+    apply from: rootProject.file('dependencies.gradle')
 }
 
 dependencies {
-    ext {
-        core = "1.10.1"
-        appCompat = "1.6.1"
-        material = "1.9.0"
-        constraintlayout = "2.1.4"
-        retrofit = "2.9.0"
-        okHTTP = "4.11.0"
-        navigation = "2.7.0"
-        viewBinding = "1.5.6"
-        hilt = "2.45"
-    }
+    implementation project(':domain')
+    implementation project(':data')
 
     implementation "androidx.core:core-ktx:$core"
     implementation "androidx.appcompat:appcompat:$appCompat"
