--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -11,4 +11,7 @@ java {
 dependencies {
     //inject
     implementation 'javax.inject:javax.inject:1'
+
+    //coroutines
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core-jvm:1.7.1'
 }
