--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,4 +67,8 @@ dependencies {
     implementation "androidx.room:room-runtime:$room"
     kapt "androidx.room:room-compiler:$room"
     implementation "androidx.room:room-ktx:$room"
+
+    //Security
+    implementation "androidx.security:security-crypto:$security"
+
 }
