--- a/data/build.gradle
+++ b/data/build.gradle
@@ -35,7 +35,6 @@ android {
 
 dependencies {
     implementation project(':domain')
-
     //Hilt
     implementation "com.google.dagger:hilt-android:$hilt"
     kapt "com.google.dagger:hilt-compiler:$hilt"
@@ -50,4 +49,9 @@ dependencies {
 
     //Retrofit
     implementation "com.squareup.retrofit2:retrofit:$retrofit"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofit"
+    implementation "com.squareup.okhttp3:okhttp:$okHTTP"
+
+    //Security
+    implementation "androidx.security:security-crypto:$security"
 }
